<?xml version="1.0"?>
<!--
  package.xml

  Copyright (c) 2023. All rights reserved.

  tf_conversions 包的 ROS 包定义文件。
  此文件定义了包的元数据、依赖项和构建信息。
-->
<package>
  <!-- 包的名称，必须是唯一的 -->
  <name>tf_conversions</name>
  <!-- 包的版本号 -->
  <version>1.12.0</version>
  <!-- 包的简短描述 -->
  <description>

   <!-- 包的详细描述 -->
   This package contains a set of conversion functions to convert
common tf datatypes (point, vector, pose, etc) into semantically
identical datatypes used by other libraries. The conversion functions
make it easier for users of the transform library (tf) to work with
the datatype of their choice. Currently this package has support for
the Kinematics and Dynamics Library (KDL) and the Eigen matrix
library. This package is stable, and will get integrated into tf in
the next major release cycle (see roadmap).

  </description>
  <!-- 包的作者 -->
  <author>Tully Foote</author>
  <!-- 包的维护者及其电子邮件 -->
  <maintainer email="tfoote@osrfoundation.org">Tully Foote</maintainer>

  <!-- 包的许可证类型 -->
  <license>BSD</license>
  <!-- 包的官方网站或 wiki 页面 -->
  <url>http://www.ros.org/wiki/tf_conversions</url>

  <!-- 构建工具依赖，指定 catkin 的最低版本 -->
  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <!-- 构建时依赖项，这些包在编译此包时是必需的 -->
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>tf</build_depend>

  <!-- 运行时依赖项，这些包在运行此包时是必需的 -->
  <run_depend>eigen</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>tf</run_depend>

  <!-- 导出标签，用于声明包提供的额外信息，例如 rosdoc 配置 -->
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
